--- a/Superstore_Profit_Hunt/Super_Profit_Analysis.ipynb
+++ b/Superstore_Profit_Hunt/Super_Profit_Analysis.ipynb
@@ -1727,7 +1727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": null,
    "id": "f21d60c6",
    "metadata": {},
    "outputs": [
@@ -1744,7 +1744,7 @@
    ],
    "source": [
     "furniture_data.groupby('sub_category')['profit'].sum().sort_values().plot(kind = 'bar', color=['red','green','grey','blue'])\n",
-    "plt.title(\"Profit By sun_category of Furniture\")\n",
+    "plt.title(\"Profit By sub_category of Furniture\")\n",
     "plt.xlabel(\"Sub_Category\")\n",
     "plt.ylabel(\"Total Profit\")\n",
     "plt.show()"
